2000-07-10  Dan Winship  <danw@helixcode.com>

	* main.c (development_warning): Update the message.

2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell-folder-title-bar.c (title_button_clicked_cb):
	Temporarily `#if 0'ed out.

2000-07-10  Dan Winship  <danw@helixcode.com>

	* e-shell.c (impl_Shell_user_select_folder): Translate a
	default_folder of "" into NULL (which can't be passed over CORBA).

2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>

	* e-storage.c (e_storage_new_folder): Removed debugging message.

	* e-storage-set.c (storage_new_folder_cb): Removed debugging
	message.

2000-07-10  Federico Mena Quintero  <federico@helixcode.com>

	* e-shell-view.c (unrealize): As a quasi-hack, do a gdk_flush()
	when the shell view is unrealized so that the DeleteEvent gets
	sent to the remote plugs as soon as possible before we start
	making other CORBA calls.  The problem is that our CORBA pipe is
	synchronous while our X pipe is asynch.  We have to ensure
	ordering for certain operations.  This is NOT the correct and
	complete fix, which should go in Bonobo.

2000-07-08  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell-view.c (e_shell_view_display_uri): Don't update the
	current URI if there are problems creating a view for it.
	(show_error): Remove.  Not used anymore.

2000-07-08  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell-view-menu.c: Cleanup some unused menu items and added
	"FIXMEs" for the ones we plan to add in the short term but are not
	implemented yet.
	(command_create_folder): Get rid of an unused variable.

2000-07-07  Ettore Perazzoli  <ettore@helixcode.com>

	* evolution-shell-client.c (user_select_folder): Fix small warning
	by adding proper cast when filling in the CORBA sequence struct.

2000-07-07  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell.c (setup_corba_storages): Ref the CORBA storage
	registry.

2000-07-06  Ettore Perazzoli  <ettore@helixcode.com>
